src/np222kk/dv507/a2/test/cases/negative/test_if_01.ofp
void main() {
    int i = 1;
    if (i) {
        print("Test");
    }
}